.provarCaches/00D6C0000000xA6UAI/objects/sked__Attendee__c.object
<CustomObject>
    <description>A person who may attend a group event job, along with information about their attendance.</description>
    <fields>
        <fullName>sked__Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The person who will attend the event.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Job__c</fullName>
        <description>A job that represents a group event.</description>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                    <default>true</default>
                    <label>Attended</label>
                </value>
                <value>
                    <fullName>Absent</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Time_Cancelled__c</fullName>
        <label>Time Cancelled</label>
        <type>DateTime</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__CancelTimestamp</fullName>
        <active>true</active>
        <description>A cancelled Attendee must have a cancellation timestamp.</description>
        <errorConditionFormula>AND( ISPICKVAL(sked__Status__c, &quot;Cancelled&quot;), ISNULL(sked__Time_Cancelled__c) )</errorConditionFormula>
        <errorDisplayField>sked__Time_Cancelled__c</errorDisplayField>
        <errorMessage>Time Cancelled must be set if Status is Cancelled.</errorMessage>
    </validationRules>
</CustomObject>